api: add stats/{images,versions}
